--- a/src/components/ImageUploader.css
+++ b/src/components/ImageUploader.css
@@ -1,8 +1,10 @@
+
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%; /* Ancho del contenedor al 50% del ancho del viewport */
+    width: 90%; /* Ancho del contenedor al 50% del ancho del viewport */
     margin: auto; /* Centra el contenedor horizontalmente */
     min-height: calc(100vh - 70px); /* Calcula la altura mínima del contenedor para ocupar toda la altura menos 70px (para el footer) */
     padding-bottom: 30px; /* Espacio inferior adicional */
@@ -11,6 +13,7 @@
     position: relative; /* Asegura que el contenedor se coloque correctamente en relación con otros elementos */
     justify-content: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     
   }
 
@@ -38,3 +41,41 @@
     max-width: 80%;
     max-height: fit-content;
 }
+
+
+body, button, input, .navbar {
+    font-family: 'Larken', serif;
+  }
+
+button, input[type="button"], input[type="submit"], .navbar {
+    background-color: #8E44AD;
+    font-family: 'Larken', sans-serif;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  button:hover, input[type="button"]:hover, input[type="submit"]:hover, .navbar:hover {
+    background-color:#BD10E0;
+  }
+  
+  button:active, input[type="button"]:active, input[type="submit"]:active, .navbar:active {
+    background-color: #8E44AD;
+  }
+  
+  button.secondary, input[type="button"].secondary, input[type="submit"].secondary, .navbar.secondary {
+    background-color: #9013FE;
+  }
+  
+  button.secondary:hover, input[type="button"].secondary:hover, input[type="submit"].secondary:hover, .navbar.secondary:hover {
+    background-color: var(#BD10E0);
+  }
+  
+  button.secondary:active, input[type="button"].secondary:active, input[type="submit"].secondary:active, .navbar.secondary:active {
+    background-color: #D2B4DE;
+  }
