--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -40,15 +40,15 @@
   .socialMenu {
     position: absolute;
     top: -185%;
-    right: 26%;
+    right: 0;
     background-color: #444;
-    padding: 10px;
+    padding: 15px 80px 15px 80px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-    z-index: 100;
+    right: -19%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+   
   }
   
   .socialLink {
