--- a/src/components/ImageUploader.css
+++ b/src/components/ImageUploader.css
@@ -7,20 +7,32 @@
   min-height: calc(100vh - 70px); /* Calcula la altura mínima del contenedor para ocupar toda la altura menos 70px (para el footer) */
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.834); /* Fondo gris transparente */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+  border-radius: 8px; /* Bordes redondeados */
+  margin-top: 50px;
+  font-family: Arial, sans-serif;
+  font-size: 18px; /* Tamaño de fuente */
+  padding-bottom: 10px; /* Añade un padding al final del contenedor */
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #333; /* Color de texto */
 }
 
 .image {
-  margin-top: 20px;
   max-width: 100%;
-  height: 250px; /* Para mantener la proporción de la imagen */
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  margin-top: 20px;
+  border: 1px solid #ddd; /* Añade un borde ligero */
+  padding: 5px;
+  border-radius: 8px; /* Bordes redondeados */
+  background-color: white;
 }
 
 .selectContainer {
-  margin-top: 20px;
+  margin: 20px 0;
   display: flex;
   align-items: center;
 }
@@ -31,32 +43,67 @@
 }
 
 .select {
-  padding: 8px;
-  font-size: 16px;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 5px; /* Bordes redondeados */
 }
 
 .buttonContainer {
-  margin-top: 20px;
-  display: flex;
-  gap: 10px; /* Espacio entre botones */
+  margin: 20px 0;
 }
 
 .button {
-  flex: 1; /* Ocupa todo el espacio disponible */
-  background-color: #8E44AD;
-  color: white;
-  border: none;
   padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
+  background-color: #834dc0;
+  color: #fff;
+  border: none;
   border-radius: 5px;
+  cursor: pointer;
   transition: background-color 0.3s ease;
+  font-size: 16px;
 }
 
 .button:hover {
-  background-color: #BD10E0;
+  background-color: #a46bda;
 }
 
-.button:active {
-  background-color: #8E44AD;
+.text {
+  white-space: pre-wrap;
+  text-align: left;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 20px;
+  max-width: 100%;
+  overflow: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+}
+
+.filteredData {
+  margin-top: 20px;
+  text-align: center;
+}
+
+
+.alert {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #bf6cd8; /* Color de fondo rojo */
+  color: white; /* Color de texto blanco */
+  padding: 15px; /* Espaciado interior */
+  border-radius: 5px; /* Bordes redondeados */
+  z-index: 1000; /* Z-index alto para estar sobre otros elementos */
+  display: none; /* Inicialmente oculto */
+}
+
+
+.alert.show {
+  display: block;
+  opacity: 1;
+}
+
+.alert-success {
+  background-color: #4caf50;
 }
