--- a/src/components/NosotrosComp.css
+++ b/src/components/NosotrosComp.css
@@ -1,28 +1,46 @@
+/* NosotrosComp.css */
 .nosotros-container {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .main-image {
-    width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-    border-radius: 5px;
-  }
-  
-  .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .text {
-    flex: 1;
-    margin-right: 20px;
-  }
-  
-  .floating-image {
-    width: 200px;
-    height: auto;
-  }
+  text-align: center;
+  padding: 20px 40px 40px; /* Reduce the top padding */
+  background: linear-gradient(135deg, #1f1c2c, #928dab);
+  color: #fff;
+  font-family: 'Arial', sans-serif;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  margin-top: 0; /* Ensure no top margin */
+}
+
+.nosotros-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  margin-top: 0; /* Reduce the top margin */
+}
+
+.main-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+.text {
+  flex: 1;
+  font-size: 1.1em;
+  line-height: 1.6;
+}
+
+.floating-image {
+  width: 300px;
+  height: auto;
+  border-radius: 50px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
