--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -28,12 +28,11 @@
   position: absolute;
   top: 180%; /* Cambia esto para ajustar la posición vertical */
   transform: translateY(-50%); /* Centra verticalmente el formulario */
-  right: 0;
+  right: 1%;
   background-color: #444;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-  
   display: flex;
   flex-direction: column;
   align-items: center; /* Centra los elementos horizontalmente */
@@ -71,5 +70,5 @@
   border-radius: 5px;
   margin-top: 10px; /* Espacio superior */
   align-self: center; /* Centra el botón dentro del contenedor */
-  
+  margin-left: 50px;
 }
