--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -23,11 +23,11 @@
 }
 
 .home-image {
-  width: 100%;
-  height: 100%;
+  width:68%;
   object-fit: cover; /* Asegura que la imagen cubra todo el contenedor sin distorsionarse */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-height: 500px;
 }
 
 .register-button {
