--- a/src/components/FacturaForm.css
+++ b/src/components/FacturaForm.css
@@ -1,119 +1,106 @@
 /* FacturaForm.css */
 
+/* Paleta de colores */
+:root {
+  --primary-color: #4A90E2;
+  --secondary-color: #50E3C2;
+  --error-color: #E74C3C;
+  --success-color: #2ECC71;
+  --background-color: #f9f9f9;
+  --text-color: #333;
+  --border-color: #ddd;
+  --violet: #8E44AD;
+  --light-purple: #D2B4DE;
+  --purple: #9013FE;
+}
+
+/* Contenedor general */
 .container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 80px;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
+  padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+  max-width: 1300px;
+  margin: 20px auto;
 }
 
-.floating-alert {
-  position: fixed;
-  top: 50%;
-  left: 60%;
-  transform: translate(-50%, -50%);
-  z-index: 1000; /* Ajusta según sea necesario para que esté por encima del resto del contenido */
-  width: 400px; /* Ancho deseado del alert */
-}
-
+/* Estilos para el título */
 h2 {
-  margin-top: 0px;
-  margin-bottom: 4px;
+  color: var(--primary-color);
+  text-align: center;
+  margin-bottom: 20px;
 }
 
+/* Estilos para el formulario */
 form {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
+/* Columnas del formulario */
 .form-column {
   flex: 1;
-  margin-right: 20px;
+  min-width: 300px;
 }
 
-.form-column:last-child {
-  margin-right: 0;
-}
-
+/* Estilos para las etiquetas y campos de entrada */
 label {
+  display: block;
   margin-bottom: 10px;
+  color: var(--text-color);
   font-weight: bold;
-  color: #333;
 }
 
-input[type="text"],
-input[type="date"],
-input[type="number"],
-select {
+input, select {
   width: 100%;
   padding: 8px;
   margin-top: 5px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
+  font-size: 14px;
   box-sizing: border-box;
-  font-size: 16px;
 }
 
-button {
+/* Estilos para el botón */
+.button-container {
   width: 100%;
-  padding: 10px;
-  background-color: #4CAF50;
+  text-align: center;
+  margin-top: 20px;
+}
+
+button[type="submit"] {
+  background-color: var(--violet);
+  font-family: 'Larken', sans-serif;
   color: white;
   border: none;
-  border-radius: 4px;
-  font-size: 16px;
+  padding: 8px 16px;
+  font-size: 14px;
   cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-button:hover {
-  background-color: #45a049;
+button[type="submit"]:hover {
+  background-color: var(--light-purple);
 }
 
-table {
-  width: 100%;
-  margin-top: 14px;
-  border-collapse: collapse;
-  border-radius: 3px;
+button[type="submit"]:active {
+  background-color: var(--violet);
 }
 
-table, th, td {
-  border: 1px solid #ccc;
+/* Estilos para las alertas flotantes */
+.floating-alert {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1000;
+  width: 300px;
 }
 
-th, td {
-  padding: 10px;
-  text-align: left;
-}
-
-th {
-  background-color: #f2f2f2;
-}
-
-td {
-  background-color: #ffffff;
-}
-
-td button {
-  padding: 5px 10px;
-  margin: 0 5px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-td button:hover {
-  opacity: 0.8;
-}
-
-td button:nth-child(1) {
-  background-color: #4CAF50;
-  color: white;
-}
-
-td button:nth-child(2) {
-  background-color: #f44336;
-  color: white;
+/* Responsive */
+@media (max-width: 768px) {
+  .form-column {
+    min-width: 100%;
+  }
 }
