--- a/src/components/InformeGraficos.css
+++ b/src/components/InformeGraficos.css
@@ -2,23 +2,25 @@
 body, button, input, .navbar {
     font-family: 'Larken', serif;
   }
-  
 
-  .MenuConteiner{
+  .GraphConteiner{
     flex: 1;
-    
-    background-color: rgba(255, 255, 255, 0.834); /* Fondo gris transparente */
     padding: 20px;
     border-radius: 10px 0px 0px 10px;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center; /* Centra el contenido verticalmente */
+    width: 90%;
+    margin-top: 20px;
+    background-color: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   }
   
   /* Estilo para el título */
   h2 {
     color: var(--purple);
+    font-family: 'Larken', sans-serif;
     text-align: center;
     padding: 10px;
     border-bottom: 2px solid var(--light-purple);
@@ -26,8 +28,8 @@ body, button, input, .navbar {
   
   /* Estilo para el contenedor del gráfico */
   .graphContainer {
-    width: 80%;
-    max-width: 800px; /* Ancho máximo del contenedor */
+    width: 90%;
+    max-width: 1000px; /* Ancho máximo del contenedor */
     margin-top: 20px;
     
   }
@@ -43,17 +45,6 @@ body, button, input, .navbar {
     margin: 5px 0;
   }
   
-  /* Media Queries para ajustar el tamaño del contenedor principal */
-  @media (max-width: 768px) {
-    .graphContainer {
-      width: 90%;
-    }
-  }
   
-  /* Media Queries para tamaños más pequeños de pantalla */
-  @media (max-width: 576px) {
-    .graphContainer {
-      width: 100%;
-    }
-  }
+  
   
